marklogic-data-hub-central/ui/src/components/entities/create-edit-step/create-edit-step.module.scss
.createEditStep {
    margin-left: 10px;
}

.modal {
    &.modal-header {
    border-bottom: 0 none;
    }
    height: 483px;
}

.modal .modal-footer {
    border-top: 0 none;
}

.title {
    font-size :23px;
}

.disabledSaveButton {
    pointer-events: none;
    &:disabled {
        &:hover {
            background-color: #f5f5f5;
            border-color: #d9d9d9;
        }
    }
}

.disabledCursor {
    cursor: not-allowed;
}

.questionCircle {
    font-size: 12px;
    color: #7F86B5;
}

.questionCircleCollection {
    font-size: 12px;
    color: #7F86B5;
    margin-left: 92px;
    margin-top: 14px;
    position: absolute;
}

.questionCircleQuery {
    font-size: 12px;
    color: #7F86B5;
    margin-left: -10px;
    margin-top: 14px;
    position: absolute;
}

.searchIcon {
    float: right;
    margin-right: 25px;
    font-size: 20px;
    position: relative;
    margin-top: -30px;
    color: #bfbfbf;
}

.asterisk{
    color: #DB4f59;
}

.submitButtonsForm{
    text-align: right;
    top: -15px;
    margin-bottom: -15px;
    margin-right: 5px;
}

.submitButtons{
    text-align: right;
    width: 161%;
}

.ConfirmationMessage {
    font-size: 16px
}

.input{
    width: 95%;
}

.srcCollectionInput{
    display:block;
    width:100%;
    height:42px;
}

.timestamp {
    padding-bottom: 2em;
}

